2000-08-16  Peter Williams  <peterw@helixcode.com>

	* message-thread.c (walk_containers): More (default disabled)
	mem debugging here.

2000-08-15  Peter Williams  <peterw@helixcode.com>

	* message-thread.c (alloc_container): Add support for debugging
	container allocations -- currently disabled. Make sure that
	the g_strfreev works.

	* message-list.c (main_message_changed): Address bug #496 --
	possible race when forwading a message_changed event.

	* mail-threads.c (dispatch): Close the dispatch thread's half of
	pipes when about to exit.
	(mail_operations_terminate): Close the main thread's half of the
	pipes when about to exit.
	(all): Add i18n support.
	
	* mail-tools.c (all): Add i18n support.

	* mail-ops.c (transfer_messages): Generalize move_messages into
	transfer_messages so that we can copy too.
	(all): Add i18n supprt where appropriate.

	* mail-ops.h: Prototype the new mail_do_transfer_messages.

	* folder-browser-factory.c: Add a UI hook for copy_msg.

	* mail-callbacks.c (transfer_msg): Generalize move so that it supports
	copy as well, and add a callback 'copy_msg'.

	* message-list.c (on_right_click): Add a right-click hook for Copy Message.

	* session.c (mail_request_dialog): Don't deadlock when in main thread.
	
2000-08-14  Peter Williams  <peterw@helixcode.com>

	* mail-threads.c (show_error): Fix the error dialogs.
	(read_msg): Re-enable them.

	* mail-ops.c (do_scan_subfolders): Silence a compile warning.

2000-08-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-crypto.c (mail_crypto_openpgp_encrypt): Added support for
	encrypting via PGP 5.0

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (cleanup_create_folder): Release the listener object
	with `CORBA_Object_release()', not `CORBA_free()'.

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* main.c (main): Set the signal handlers for `SIGSEGV' and
	`SIGBUS' to the default ones.

2000-08-13  Jeffrey Stedfast  <fejj@helixcode.com>
